- translation support, including fix for #157

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -389,7 +389,7 @@
 
     "ShipBuildType.pod.name": "Kleines Shuttle",
 
-    "ShipBuildType.shuttle.name": "Shuttle",
+    "ShipBuildType.shuttlecraft.name": "Shuttle",
 
     "ShipBuildType.runabout.name": "Runabout",
 
