--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -450,7 +450,7 @@
 
     "ShipBuildType.pod.name": "Nacelle",
 
-    "ShipBuildType.shuttle.name": "Navette",
+    "ShipBuildType.shuttlecraft.name": "Navette",
 
     "ShipBuildType.runabout.name": "Runabout",
 
